--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,16 @@
     android:theme="@style/Theme.OfficeDesk"
     tools:targetApi="31">
 
-    <activity
-        android:name=".Inline"> <!-- Inline dideklarasikan -->
+    <activity android:name=".InlineActivity"
+        tools:ignore="IntentFilterExportedReceiver">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
 
-    <activity
-        android:name=".LoginActivity" /> <!-- LoginActivity dideklarasikan di sini -->
+    <activity android:name=".SignUpActivity" />
+    <activity android:name=".LoginActivity" />
 
 </application>
 
