--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.gustyx.officedesk">
 
@@ -11,8 +12,8 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.OfficeDesk"
-    tools:targetApi="31">
+    android:theme="@style/AppTheme"
+    tools:targetApi="29">
 
     <activity android:name=".InlineActivity"
         tools:ignore="IntentFilterExportedReceiver">
