--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = '1.9.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:1.9.10-1.0.13"
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.6.1' apply false
     id 'com.android.library' version '8.6.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'com.google.devtools.ksp' version '1.9.10-1.0.13' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+}
+
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 }
