--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'androidx.activity:activity-ktx:1.9.3'
+    implementation 'androidx.biometric:biometric:1.2.0-alpha05'
+
+    def room_version = "2.6.1"
+    ksp 'androidx.room:room-compiler:2.6.1'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    def lifecycle_version = '2.8.7'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 }
