--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ android {
         minSdk 26
         targetSdk 35
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
-        versionNameSuffix '2024.12.11'
+        versionNameSuffix '~debug-alpha-rc01'
     }
 
     buildTypes {
