--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,19 @@
     android:theme="@style/AppTheme"
     tools:targetApi="29">
 
+
     <activity
-        android:name=".InlineActivity"
-        android:exported="true"
-        tools:ignore="IntentFilterExportedReceiver">
+        android:name=".SplashActivity"
+        android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
 
+    <activity android:name=".InlineActivity" />
     <activity android:name=".SignUpActivity" />
-    <activity android:name=".LoginActivity" />
+    <activity android:name=".DashboardActivity" />
 
 </application>
 
