--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,10 @@ android {
         minSdk 26
         targetSdk 35
         versionCode 1
-        versionName "1.1"
-
+        versionName "1.1-BetaRC-01"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
-        versionNameSuffix '~debug-alpha-rc02'
+
     }
 
     buildTypes {
